--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.3.1",
+    "chart.js": "^2.9.3",
     "leaflet": "^1.6.0",
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
+    "react-chartjs-2": "^2.9.0",
     "react-dom": "^16.8.6",
     "react-lazyload": "^2.5.0",
     "react-leaflet": "^2.6.3",
